--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "casual": "^1.6.2",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
