--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^5.9.6",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "stream-json": "^1.3.3"
   },
   "scripts": {
     "start": "nodemon app.js"
